<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="30dp"
    android:background="@drawable/img"
    >
   <TableRow>
       <EditText
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:hint="@string/enter_your_name"
           android:id="@+id/name"
           />
       <Spinner
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/gender"
           />
   </TableRow>
    <TableRow>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_weight"
            android:id="@+id/weight"
            android:inputType="numberDecimal"
            />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weightSpinner"
            />
    </TableRow>
    <TableRow>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_height"
            android:id="@+id/height"
            android:inputType="numberDecimal"
            />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heightSpinner"
            />
    </TableRow>
     <TableRow>
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/save_data"
             android:id="@+id/checksave"
             />
     </TableRow>
   <TableRow>
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/get_bmi_scale"
           android:onClick="onclickGetBMI"
           />
   </TableRow>
<TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        />
</TableRow>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_timer"
        android:onClick="btnGoToTimer"
        android:layout_marginRight="30dp"
        />
    <TableRow>

    </TableRow>


</TableLayout>